fixed minor layout bugs

--- a/cmo-module/src/main/resources/META-INF/resources/scss/cmo/_metadata.scss
+++ b/cmo-module/src/main/resources/META-INF/resources/scss/cmo/_metadata.scss
@@ -27,7 +27,7 @@ table > tbody > tr.cmo_noBorder > td, table > tbody > tr.cmo_noBorder > th {
   padding: 0px 8px 8px 8px;
 }
 table > tbody > tr.cmo_border > td {
-  padding: 0px 8px 8px 8px;
+  padding-left: 8px;
 }
 
 .cmo_contentType {
